--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+<ion-tabs color="mine"  >
+  <ion-tab [root]="tab1Root"  tabIcon="ios-home-outline" tabsHideOnSubPages="true"></ion-tab>
+  <ion-tab [root]="tab2Root"  tabIcon="ios-contact-outline"></ion-tab>
+  <ion-tab [root]="tab3Root"  tabIcon="ios-settings-outline"></ion-tab>
 </ion-tabs>
