--- a/src/pages/display/display.html
+++ b/src/pages/display/display.html
@@ -21,9 +21,10 @@
 
   <div class="con" >
     <div class="ok">
+      <br>
  <div class="cadrs">
    <div class="text">
-     <br>
+      <br>
   <p>CHASE <ion-icon ios="ios-aperture" md="md-aperture"></ion-icon></p>
   <br>
   <p>SARAH GEORGE</p>
@@ -38,7 +39,7 @@
 </ion-header>
 
 
-<ion-content >
+<ion-content class="conentes">
     <ion-item class="ion-item">
         <ion-thumbnail item-start>
             <ion-icon ios="ios-calendar" md="md-calendar" style="zoom:2.0"></ion-icon>
