--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -29,8 +29,9 @@
   </div>
   </ion-header>
 
-<ion-content padding class="con2">
-<div class="items">
+<ion-content class="con2">
+<div class="items2">
+    <div class="contentAlignment">
     <ion-grid style="text-align: center">
         <ion-row>
           <ion-col >
@@ -74,7 +75,7 @@
             </ion-col>
           </ion-row>
       </ion-grid>
-  
+    </div>
 </div>  
    
 </ion-content>
