--- a/src/pages/display/display.html
+++ b/src/pages/display/display.html
@@ -6,17 +6,15 @@
 -->
 <ion-header>
   <ion-toolbar color="mine">
-    <ion-buttons start>
-      <button ion-button icon-only color="royal">
-          <ion-icon ios="ios-menu" md="md-menu"></ion-icon>
-      </button>
-    </ion-buttons>
-    <ion-title>Recent Bills</ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only color="royal">
-          <ion-icon name="search"></ion-icon>
-      </button>
-    </ion-buttons>
+    <ion-navbar style="text-align: center" color="mine">
+        <ion-title style="text-align: center">Recent Bills</ion-title>
+        <ion-buttons end>
+            <button ion-button icon-only color="royal">
+                <ion-icon name="search"></ion-icon>
+            </button>
+          </ion-buttons>
+    </ion-navbar>
+    
   </ion-toolbar>
 
   <div class="con" >
